--- a/public/index.html
+++ b/public/index.html
@@ -4,9 +4,12 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
 
-    <title>Totally Not Wordle</title>
+    <title>Samdle</title>
 
-    <link rel="icon" type="image/png" href="./favicon.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="./favicon-16.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="./favicon-32.png" />
+    <link rel="shortcut icon" href="./favicon.ico" />
+
     <link rel="stylesheet" href="./global.css" />
     <link rel="stylesheet" href="./build/bundle.css" />
 
